# personal-expenses-accounting

./: .gitignore  .pylintrc  .travis.yml  .venv  README.md  docker-compose.yml  gitignore  pyproject.toml  requirements.txt  run-container.sh  start-dev.sh  tess.txt
Docker/python/: Dockerfile  requirements.txt  start.sh
app/: ImageProcessing.py  Recogniser.py  data-result.txt  out.txt  out2.txt  regex.txt  requirements.txt  text-from-image.py
app/1188_parser/: category.json
app/base/: count_lines.py
app/fonts/Hypermarket/: Hypermarket W00 Regular.eot
app/mobile_app/: package-lock.json
app/output-receipt/: dc2.txt
app/services/client/: .babelrc  .eslintrc.js  .gitignore  Dockerfile  index.html  jest.config.js  package-lock.json  package.json  webpack.config.js
app/services/mobile_app/: .env  App.js  Dockerfile  app.json  package-lock.json  package.json
app/services/recogniser/: .env  .gitignore  .pylintrc  Dockerfile  ImageHandler.py  ImageProcessing.py  Recogniser.py  config.py  manage.py  requirements.txt
app/services/server/: .gitignore  manage.py
app/services/tesseract/: .dockerignore  .env  Dockerfile  lav.lstm  (+19 more)
app/tesseract/: Dockerfile  combine.sh  eval.sh  extract_lstm.sh  fonts.txt  generate_training_data.sh  install.sh  start.sh  tess.txt  tesseract.py  training.py
app/tesseract-train-scripts/: combine.sh  finetune.sh  generate_training_data.sh
app/tests/: tesseract_tests.py
app/training lv/: font_properties  generate-box-file.txt  traing-tesseract.sh
app/utils/: ClassMetrics.py  TaskLoggerDecorator.py  TaskTimerDecorator.py  decor.py  font.py  helpers.py  rotate.py  tesseract.py
migrations/versions/: 9c0af5b61c4c_.py
services/client/: package.json
services/nginx/: Dockerfile  app.conf
test/: en.txt  out.txt  ru.txt
(+171 files in other folders)
