[tool.poetry]
name = "personal-expenses-accounting"
version = "0.1.0"
description = "Automatically track expenses using OCR"
authors = ["Viktor Sokolov <viktorsokolov.and@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-Migrate = "2.5.2"
Flask-Bcrypt = "0.7.1"
Flask-SQLAlchemy = "2.4.1"
flask-cors = "3.0.8"
pyjwt = "1.7.1"
requests = "^2.24.0"
opencv_python = "^4.3.0"
numpy = "^1.19.0"
beautifulsoup4 = "^4.9.1"
pytesseract = "^0.3.4"
Pillow = "^7.2.0"
python-dotenv = "^0.14.0"
PyMySQL = "^0.9.3"
redis = "^3.5.3"
rq = "^1.4.3"
coverage = "^5.2.1"
flasgger = "^0.9.5"
flask_login = "^0.5.0"
pandas = "^1.1.1"
cryptography = "^3.1"
colour_runner = "^0.1.1"
wand = "^0.6.2"

[tool.poetry.dev-dependencies]
parameterized = "^0.7.4"
matplotlib = "^3.2.2"
colorlog = "^4.1.0"
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
